Fixed the footer to properly center. Using text-align failed without telling the sub-divs to be display: inline-block (see http://stackoverflow.com/questions/1269589/css-center-block-but-align-contents-to-the-left).

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3753,6 +3753,7 @@ body.is-ie .wrapper.fullscreen {
 footer .dataExclusion {
     text-align: left; 
     margin-top: 3.5em;
+    display: inline-block;
 }
 
 footer h3 {
